--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,37 +1,58 @@
 .nav-bar {
   background: repeating-radial-gradient(
     circle,
-    #d96e30,
-    #d96e30 10px,
-    #bf4b21 10px,
-    #bf4b21 20px
+    #8FB6BF,
+    #D96E30 13px,
+    #A62F24 12px,
+    #A62F24 10px
   );
+  border: 1.5px solid #c90314;
+  box-shadow: 2px 2px 2px 1px #a5505c;
   display: flex;
   flex-direction: column;
   height: 24vh;
   width: 100%;
   margin-top: 0%;
+  padding: 9px;
   text-align: center;
-  text-shadow: 2px 2px 8px #a62f24;
 }
 
 .inactive {
-  color: #d9d384;
+  border: .5px solid #ffe668;
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px .25px rgb(85, 144, 216);
+  font-family: 'Bungee', cursive;
   font-size: 1.5rem;
-  padding: 0.5rem;
+  padding: 0.35rem;
   text-decoration: none;
+  text-shadow: 1px 1px 5px #ae8b8b;
   transition: 0.5s;
+}
+
+.inactive:hover {
+    background-color: #BF4B21;
+}
+
+.active:hover {
+    background-color: #BF4B21;
 }
 
 .link-box {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: -10%;
   padding: 1rem;
 }
 
+.text {
+    background-color: #8FB6BF;
+    color: #D9D384;
+}
+
 .nav-title {
-  color: #d9d384;
+  color: #D9D384;
+  font-family: 'Bevan', cursive;
   font-size: 6rem;
   margin-top: -2%;
+  text-shadow: 5px 5px 10px #fc3f2e;
 }
