--- a/src/components/EventCards/EventCards.css
+++ b/src/components/EventCards/EventCards.css
@@ -15,14 +15,14 @@
   margin-left: 5rem;
   padding: .5rem;
   text-align: center;
-  width: 100vw;
+  width: 30%;
 }
 
 img {
     align-items: center;
     border-radius: 2rem;
-    width: 20rem;
-    height: 12rem;
+    width: 90%;
+    height: 30%;
     display: block;
     margin-left: auto;
     margin-right: auto;
