--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -17,7 +17,8 @@
   text-align: center;
 }
 
-.home-link {
+.home-link,
+.favorites-link {
   border: .5px solid #ffe668;
   border-radius: 5px;
   box-shadow: 1px 1px 1px .25px rgb(85, 144, 216);
