--- a/src/components/EventCards/EventCards.css
+++ b/src/components/EventCards/EventCards.css
@@ -12,7 +12,8 @@
   height: auto;
   justify-content: space-evenly; 
   margin-bottom: 1rem;
-  margin-left: 5rem;
+  margin-left: 1rem;
+  margin-top: 2rem;
   padding: .5rem;
   text-align: center;
   width: 30%;
