--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
-html, body {
-  background-color: #8FB6BF;
+html,
+body {
+  background-color: #8fb6bf;
   flex-direction: row;
   font-family: 'Bevan', cursive;
   margin: 0%;
 }
 
 h1 {
-  color: #D9D384;
+  color: #d9d384;
   font-family: 'Bevan', cursive;
   font-size: 6rem;
   margin-top: -2%;
