--- a/src/components/EventCards/EventCards.css
+++ b/src/components/EventCards/EventCards.css
@@ -2,76 +2,76 @@
   align-items: center;
   background-color: #d9d384;
   box-sizing: border-box;
-  border: .6rem solid #bf4b21;
+  border: 0.6rem solid #bf4b21;
   border-radius: 2rem;
-  color: #BF4B21;
+  color: #bf4b21;
   display: flex;
   flex-direction: column;
   font-family: 'Barlow', sans-serif;
-  font-size: .9rem;
+  font-size: 0.9rem;
   height: auto;
-  justify-content: space-evenly; 
+  justify-content: space-evenly;
   margin-bottom: 1rem;
   margin-left: 1rem;
   margin-top: 2rem;
-  padding: .5rem;
+  padding: 0.5rem;
   text-align: center;
   width: 30%;
 }
 
 img {
-    align-items: center;
-    border-radius: 2rem;
-    width: 90%;
-    height: 30%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1rem;
+  align-items: center;
+  border-radius: 2rem;
+  width: 90%;
+  height: 30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1rem;
 }
 
 .img-container {
-    background-color: #8FB6BF;
-    border-radius: 2rem;
-    margin: 0;
+  background-color: #8fb6bf;
+  border-radius: 2rem;
+  margin: 0;
 }
 
 .wrapper {
-    background-color: #BF4B21;
-    border-radius: 2rem;
-    padding: .75rem;
-    margin: 0;
+  background-color: #bf4b21;
+  border-radius: 2rem;
+  padding: 0.75rem;
+  margin: 0;
 }
 
 .update-favs {
-    color:#A62F24;
-    font-size: .5rem;
-    font-weight: 550;
-    padding-bottom: 0.25rem;
+  color: #a62f24;
+  font-size: 0.5rem;
+  font-weight: 550;
+  padding-bottom: 0.25rem;
 }
 
 .fav-btn {
-    background-color:#8FB6BF;
-    border: .5px solid #ffe668;
-    border-radius: 5px;
-    box-shadow: 1px 1px 1px .25px rgb(85, 144, 216);
-    color: #D9D384;
-    font-family: 'Bungee', cursive;
-    font-size: 1.5rem;
-    margin: 0;
-    padding: 0.35rem;
-    position: static;
-    text-decoration: none;
-    text-shadow: 1px 1px 5px #ae8b8b;
-    transition: 0.5s;
-  }
-  
-  .fav-btn:hover {
-      background-color: #BF4B21;
-  }
-  
-  .ticket-links {
-    color: #8FB6BF;
-    text-shadow: 2px 2px 2px 6px #D96E30;
-    padding: 1rem;
-  }
+  background-color: #8fb6bf;
+  border: 0.5px solid #ffe668;
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px 0.25px rgb(85, 144, 216);
+  color: #d9d384;
+  font-family: 'Bungee', cursive;
+  font-size: 1.5rem;
+  margin: 0;
+  padding: 0.35rem;
+  position: static;
+  text-decoration: none;
+  text-shadow: 1px 1px 5px #ae8b8b;
+  transition: 0.5s;
+}
+
+.fav-btn:hover {
+  background-color: #bf4b21;
+}
+
+.ticket-links {
+  color: #8fb6bf;
+  text-shadow: 2px 2px 2px 6px #d96e30;
+  padding: 1rem;
+}
