--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,43 +1,43 @@
 .landing-page {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 100%;
-    background: linear-gradient(rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.9)), url("../../assets/speakers.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    position: fixed;
-    z-index: 5;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.9)),
+    url('../../assets/speakers.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  position: fixed;
+  z-index: 5;
 }
-
 
 .tune-out-wrapper,
 .explore-btn-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50%;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
+  width: 100%;
 }
 
 .explore-btn {
-    background-color:#8FB6BF;
-    border: .5px solid #ffe668;
-    border-radius: 5px;
-    box-shadow: 1px 1px 1px .25px rgb(85, 144, 216);
-    color: #D9D384;
-    font-family: 'Bungee', cursive;
-    font-size: 1.5rem;
-    margin: 0;
-    padding: 0.35rem;
-    position: static;
-    text-decoration: none;
-    text-shadow: 1px 1px 5px #ae8b8b;
-    transition: 0.5s;
+  background-color: #8fb6bf;
+  border: 0.5px solid #ffe668;
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px 0.25px rgb(85, 144, 216);
+  color: #d9d384;
+  font-family: 'Bungee', cursive;
+  font-size: 1.5rem;
+  margin: 0;
+  padding: 0.35rem;
+  position: static;
+  text-decoration: none;
+  text-shadow: 1px 1px 5px #ae8b8b;
+  transition: 0.5s;
 }
 
 .explore-btn:hover {
-    background-color: #BF4B21;
+  background-color: #bf4b21;
 }
