--- a/src/components/errorHandling/Status404.css
+++ b/src/components/errorHandling/Status404.css
@@ -10,7 +10,7 @@
   align-items: center;
   height: 100%;
   width: 100%;
-  padding: 4rem;
+  text-align: center;
 }
 
 .st404-title,
@@ -77,7 +77,7 @@
   position: relative;
 }
 
-@media screen and (max-width: 640px) {
+/* @media screen and (max-width: 640px) {
   .st404-title,
   .st404title-2,
   .st404title-3,
@@ -121,7 +121,7 @@
     width: auto;
     cursor: pointer;
   }
-}
+} */
 
 @media screen and (max-width: 1333px) {
   .st404title-4 {
